[package]
name = "library-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
slug = "0.1"
tera = "1.19"
chrono = "0.4"
ureq = { version = "2", features = ["json"] }
